# carbon

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
_archive/: 202305015-banner-generator.py
_testing/: gui#label#v2.py#Label.py  noise#__init__.py#perlin_noise_1d.py
color/: __init__.py  test_color.py
ffmpeg/: __init__.py
graph/graph2d/: v2.py
gui/: button.py  label.py  slider.py
gui/button/: v3.py
gui/label/: v2.py
gui/slider/: v2.py
keycrate/: __init__.py
math/: __init__.py
neuralnet/: convo.py  genetic.py
path/: __init__.py
time/: __init__.py
utils/: __init__.py
