[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-pypi"
version = "1.4.1"
authors = [
  { name="Nicholas Valentinus", email="nvfastplease@gmail.com" },
]
description = "Python utility library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nvfp/carbon"
"Bug Tracker" = "https://github.com/nvfp/carbon/issues"